# manim-kodisc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: cards.md  force_diagram.md  index.md  particle_simulation.md  pi_chart.md  polygon.md  regular_polygon.md  rotating_function.md  slope_field.md  web_image.md
examples/cards/: example.py
examples/force_diagram/: example.py
examples/force_diagram/media/Tex/: 059ad2f18ba19fe9.tex  22c9e009222b1f77.tex  781826a891da3675.tex  f35aa80d7c6d6029.tex
examples/force_diagram/media/videos/example/480p15/partial_movie_files/ForceDiagramExample/: partial_movie_file_list.txt
examples/geometry/polygon/: example.py
examples/particle_simulation/: example.py
examples/particle_simulation/media/videos/example/1080p60/partial_movie_files/ParticleSimulationExample/: partial_movie_file_list.txt
examples/particle_simulation/media/videos/example/480p15/partial_movie_files/ParticleSimulationExample/: partial_movie_file_list.txt
examples/pi_chart/: example.py
examples/rotating_function/: example.py
examples/slope_field/: example.py
examples/web_image/: example.py
src/manim_kodisc/: __init__.py  card.py  force_diagram.py  particle_simulation.py  pi_chart.py  rotating_function.py  slope_field.py  web_image.py
src/manim_kodisc/geometry/: __init__.py  polygon.py  regular_polygon.py
src/manim_kodisc/media/videos/rotating_function/480p15/partial_movie_files/RevolutionScene/: partial_movie_file_list.txt
(+1 files in other folders)
